--- a/Zirpl.Examples.Commerce.CodeGeneration/Templates/Model/ModelExtensionsClassTemplate.tt
+++ b/Zirpl.Examples.Commerce.CodeGeneration/Templates/Model/ModelExtensionsClassTemplate.tt
@@ -7,14 +7,22 @@
 <#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.TextTemplating" #>
 <#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration" #>
 <#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.Config" #>
-<#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.TextTemplating" #>
 <#@ assembly name="EnvDTE" #>
 <#@ assembly name="VSLangProj" #>
 <#@ assembly name="VSLangProj80" #>
 <#@ assembly name="System.Xml" #>
 <#@ assembly name="System.Xml.Serialization" #>
-<#@ parameter type="Zirpl.AppEngine.VisualStudioAutomation.TextTemplating.PreprocessedTextTransformationOutputFile" name="TemplateOutputFile" #>
+<#@ parameter type="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.AppGenerator" name="AppGenerator" #>
 <#@ parameter type="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.Config.App" name="App" #>
+<#
+this.AppGenerator.StartFile(this, new OutputFile() {
+				FileNameWithoutExtension = "ModelExtensions",
+                FileExtension = ".cs",
+                FolderPathWithinProject = this.App.Settings.GeneratedContentRootFolderName,
+                DestinationProject = this.App.ModelProject,
+                BuildAction = BuildActionTypeEnum.Compile,
+});
+#>
 using System;
 using System.Collections.Generic;
 using System.Linq;
