overridden and additional templates now have very simple APIs to call. No helper classes needed

--- a/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration/AppTransform.tt
+++ b/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration/AppTransform.tt
@@ -6,10 +6,7 @@
 <#@ assembly name="$(SolutionDir)Zirpl.Examples.Commerce.CodeGeneration\bin\$(Configuration)\Zirpl.Examples.Commerce.CodeGeneration.dll" #>
 <#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration" #>
 <#
-	using (var appGenerator = new AppGenerator(this))
-	{
-		appGenerator.TransformTemplates(new Type[] { 
+this.GenerateApp(new Type[] { 
 			typeof(Zirpl.Examples.Commerce.CodeGeneration.Templates.Model.EnumTemplate),
 			typeof(Zirpl.Examples.Commerce.CodeGeneration.Templates.Model.ModelExtensionsClassTemplate) });
-	}
 #>
