now uses placeholders and deletes old placeholders and old generated items

--- a/Zirpl.AppEngine.VisualStudioAutomation/AppGeneration/_templates/ModelProject/DT_Enum_cs.tt
+++ b/Zirpl.AppEngine.VisualStudioAutomation/AppGeneration/_templates/ModelProject/DT_Enum_cs.tt
@@ -1,4 +1,4 @@
-﻿<#@ template language="C#" inherits="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.TextTemplating.OncePerDomainTypeTemplate" #>
+﻿<#@ template language="C#" linePragmas="false" inherits="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.TextTemplating.OncePerDomainTypeTemplate" #>
 <#@ import namespace="System" #>
 <#@ import namespace="System.Collections" #>
 <#@ import namespace="System.Collections.Generic" #>
