--- a/Zirpl.AppEngine.VisualStudioAutomation/AppGeneration/_templates/DT_cs.tt
+++ b/Zirpl.AppEngine.VisualStudioAutomation/AppGeneration/_templates/DT_cs.tt
@@ -1,4 +1,4 @@
-﻿<#@ template language="C#" inherits="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.TextTemplating.OncePerDomainTypeTemplate" #>
+﻿<#@ template language="C#" linePragmas="false" inherits="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.TextTemplating.OncePerDomainTypeTemplate" #>
 <#@ import namespace="System" #>
 <#@ import namespace="System.Collections" #>
 <#@ import namespace="System.Collections.Generic" #>
@@ -66,6 +66,14 @@ namespace <#= this.DomainType.Namespace #>
         {
 #>
 			, IStaticLookup
+<#
+        }
+		if (this.DomainType.IsStaticLookup
+                && (this.DomainType.InheritsFrom == null
+					|| !this.DomainType.InheritsFrom.IsStaticLookup)
+				&& this.DomainType.EnumValues.Any())
+        {
+#>
 			, IEnumDescribed<<#= this.DomainType.IdProperty.DataTypeString #>,<#= this.DomainType.FullName #>Enum>
 <#
         }
@@ -81,7 +89,7 @@ namespace <#= this.DomainType.Namespace #>
 			foreach (var collectionProperty in this.DomainType.Properties.GetCollectionProperties())
             {
 #>
-				this.<#= collectionProperty.Name #> = this.<#= collectionProperty.Name #> ?? new <#= collectionProperty.InitializationDataTypeString #>();
+			this.<#= collectionProperty.Name #> = this.<#= collectionProperty.Name #> ?? new <#= collectionProperty.InitializationDataTypeString #>();
 <#
             }
 #>
