--- a/Zirpl.Examples.Commerce.CodeGeneration/App.tt
+++ b/Zirpl.Examples.Commerce.CodeGeneration/App.tt
@@ -1,7 +1,7 @@
 ﻿<#@ template  debug="true" hostSpecific="true" #>
 <#@ output extension=".txt" #>
 <#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration" #>
-<#@ assembly name="$(SolutionDir)Zirpl.AppEngine.CodeGeneration.VS2013\bin\$(Configuration)\Zirpl.AppEngine.VisualStudioAutomation.dll" #>
+<#@ assembly name="$(SolutionDir)Zirpl.AppEngine.VisualStudioAutomation\bin\$(Configuration)\Zirpl.AppEngine.VisualStudioAutomation.dll" #>
 <#@ CleanupBehavior processor="T4VSHost" CleanupAfterProcessingtemplate="true" #>
 <#
 this.GenerateApp();
