--- a/Zirpl.AppEngine.VisualStudioAutomation/AppGeneration/_templates/ModelProject/DT_Enum_cs.tt
+++ b/Zirpl.AppEngine.VisualStudioAutomation/AppGeneration/_templates/ModelProject/DT_Enum_cs.tt
@@ -1,4 +1,4 @@
-﻿<#@ template language="C#" linePragmas="false" inherits="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.TextTemplating.OncePerDomainTypeTemplate" #>
+﻿<#@ template language="C#" linePragmas="false" #>
 <#@ import namespace="System" #>
 <#@ import namespace="System.Collections" #>
 <#@ import namespace="System.Collections.Generic" #>
@@ -7,6 +7,8 @@
 <#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration" #>
 <#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.Config" #>
 <#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.TextTemplating" #>
+<#@ parameter type="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.Config.App" name="App" #>
+<#@ parameter type="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.Config.DomainType" name="DomainType" #>
 using System;
 using System.Collections.Generic;
 using System.Linq;
@@ -29,5 +31,5 @@ namespace <#= this.DomainType.Namespace #>
 	}
 }
 <#+
-public override bool ShouldTransform { get { return this.DomainType.IsStaticLookup && this.DomainType.EnumValues.Any(); } }
+public bool ShouldTransform { get { return this.DomainType.IsStaticLookup && this.DomainType.EnumValues.Any(); } }
 #>
