--- a/Zirpl.Examples.ContactManager.CodeGeneration/App.tt
+++ b/Zirpl.Examples.ContactManager.CodeGeneration/App.tt
@@ -3,9 +3,10 @@
 <#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration" #>
 <#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.TextTemplating" #>
 <#@ assembly name="$(SolutionDir)Zirpl.AppEngine.VisualStudioAutomation\bin\$(Configuration)\Zirpl.AppEngine.VisualStudioAutomation.dll" #>
+<#@ assembly name="$(SolutionDir)Zirpl.AppEngine\bin\$(Configuration)\Zirpl.AppEngine.dll" #>
 <#@ CleanupBehavior processor="T4VSHost" CleanupAfterProcessingtemplate="true" #>
 <#
 this.AsTransform().GenerateSolutionStructure();
-this.AsTransform().CopyDefaultTemplates();
+//this.AsTransform().CopyDefaultTemplates();
 this.AsTransform().GenerateApp();
 #>
