--- a/Zirpl.AppEngine/AppGeneration/_templates/DT_cs.tt
+++ b/Zirpl.AppEngine/AppGeneration/_templates/DT_cs.tt
@@ -11,8 +11,8 @@ using Zirpl.AppEngine.Model.Extensibility;
 
 namespace <#= this.DomainType.Namespace #>
 {
-	public <#= this.DomainType.IsAbstract ? "abstract" : "" #> partial class <#= this.DomainType.Name #> : <#= this.DomainType.InheritsFrom != null ? this.DomainType.InheritsFrom.FullName : "System.Object" #>
-			, IMetadataDescribed
+	public <#= this.DomainType.IsAbstract ? "abstract" : "" #> partial class <#= this.DomainType.Name #> : <#= this.DomainType.InheritsFrom != null ? this.DomainType.InheritsFrom.FullName : "" #>
+			<#= this.DomainType.InheritsFrom != null ? "," : "" #> IMetadataDescribed
 <#
 		if (this.DomainType.IsPersistable
                 && (this.DomainType.InheritsFrom == null
@@ -76,19 +76,16 @@ namespace <#= this.DomainType.Namespace #>
 		<#= this.DomainType.IsAbstract || this.DomainType.IsPersistable ? "protected" : "public" #> <#= this.DomainType.Name #>()
 		{
 <#
-		if (this.DomainType.Properties.GetCollectionProperties().Any())
+		foreach (var collectionProperty in this.DomainType.Properties.GetCollectionProperties())
         {
-			foreach (var collectionProperty in this.DomainType.Properties.GetCollectionProperties())
-            {
 #>
-			this.<#= collectionProperty.Name #> = this.<#= collectionProperty.Name #> ?? new <#= collectionProperty.InitializationDataTypeString #>();
+		this.<#= collectionProperty.Name #> = this.<#= collectionProperty.Name #> ?? new <#= collectionProperty.InitializationDataTypeString #>();
 <#
-            }
         }
 #>
 		}
 <#
-		foreach (var property in this.DomainType.Properties)
+		foreach (var property in this.DomainType.Properties.GetNonInterfaceProperties())
 		{
 #>
 		public virtual <#= property.DataTypeString #> <#= property.Name #> { get; set; }
@@ -97,6 +94,15 @@ namespace <#= this.DomainType.Namespace #>
 #>
 
 		#region Interface implementations
+
+<#
+		foreach (var property in this.DomainType.Properties.GetInterfaceProperties())
+		{
+#>
+		public virtual <#= property.DataTypeString #> <#= property.Name #> { get; set; }
+<#
+		}
+#>
 
 <#
 		if (this.DomainType.IsPersistable
