--- a/Zirpl.AppEngine/AppGeneration/_templates/DT_cs.tt
+++ b/Zirpl.AppEngine/AppGeneration/_templates/DT_cs.tt
@@ -2,6 +2,8 @@
 <#@ import namespace="System.Linq" #>
 <#@ parameter type="Zirpl.AppEngine.AppGeneration.App" name="App" #>
 <#@ parameter type="Zirpl.AppEngine.AppGeneration.DomainType" name="DomainType" #>
+<#@ parameter type="System.String" name="Namespace" #>
+<#@ parameter type="System.String" name="ClassName" #>
 using System;
 using System.Collections.Generic;
 using System.Linq;
@@ -9,9 +11,9 @@ using Zirpl.AppEngine.Model;
 using Zirpl.AppEngine.Model.Metadata;
 using Zirpl.AppEngine.Model.Extensibility;
 
-namespace <#= this.DomainType.Namespace #>
+namespace <#= this.Namespace #>
 {
-	public <#= this.DomainType.IsAbstract ? "abstract" : "" #> partial class <#= this.DomainType.Name #> : <#= this.DomainType.InheritsFrom != null ? this.DomainType.InheritsFrom.FullName : "" #>
+	public <#= this.DomainType.IsAbstract ? "abstract" : "" #> partial class <#= this.ClassName #> : <#= this.DomainType.InheritsFrom != null ? this.DomainType.InheritsFrom.FullName : "" #>
 			<#= this.DomainType.InheritsFrom != null ? "," : "" #> IMetadataDescribed
 <#
 		if (this.DomainType.IsPersistable
@@ -73,7 +75,7 @@ namespace <#= this.DomainType.Namespace #>
         }
 #>
 	{
-		<#= this.DomainType.IsAbstract || this.DomainType.IsPersistable ? "protected" : "public" #> <#= this.DomainType.Name #>()
+		<#= this.DomainType.IsAbstract || this.DomainType.IsPersistable ? "protected" : "public" #> <#= this.ClassName #>()
 		{
 <#
 		foreach (var collectionProperty in this.DomainType.Properties.GetCollectionProperties())
