--- a/Zirpl.AppEngine/AppGeneration/_templates/_Model/DT_Enum_cs.tt
+++ b/Zirpl.AppEngine/AppGeneration/_templates/_Model/DT_Enum_cs.tt
@@ -2,11 +2,13 @@
 <#@ import namespace="System.Linq" #>
 <#@ parameter type="Zirpl.AppEngine.AppGeneration.App" name="App" #>
 <#@ parameter type="Zirpl.AppEngine.AppGeneration.DomainType" name="DomainType" #>
+<#@ parameter type="System.String" name="Namespace" #>
+<#@ parameter type="System.String" name="ClassName" #>
 using System;
 
-namespace <#= this.DomainType.Namespace #>
+namespace <#= this.Namespace #>
 {
-	public enum <#= this.DomainType.Name #>Enum : <#= this.DomainType.IdProperty.DataTypeString #>
+	public enum <#= this.ClassName #> : <#= this.DomainType.IdProperty.DataTypeString #>
 	{
 <#
 		foreach (var enumValue in this.DomainType.EnumValues)
