--- a/Zirpl.AppEngine.VisualStudioAutomation/AppGeneration/Templates/DataService/EntityFramework/_templates/_DataService/AppDataContext_cs.tt
+++ b/Zirpl.AppEngine.VisualStudioAutomation/AppGeneration/Templates/DataService/EntityFramework/_templates/_DataService/AppDataContext_cs.tt
@@ -2,13 +2,13 @@
 <#@ import namespace="System.Linq" #>
 <#@ parameter type="Zirpl.AppEngine.AppGeneration.App" name="App" #>
 <#@ parameter type="System.String" name="Namespace" #>
-<#@ parameter type="System.String" name="ClassName" #>
+<#@ parameter type="System.String" name="TypeName" #>
 using System;
 using System.Data.Entity;
 
 namespace <#= this.Namespace #>
 {
-    public partial class <#= this.ClassName #> : <#= this.Namespace #>.DataContextBase
+    public partial class <#= this.TypeName #> : <#= this.Namespace #>.DataContextBase
     {
 <#
 	foreach (var domainType in App.DomainTypes.Where(o => o.IsPersistable))
