--- a/Zirpl.AppEngine.VisualStudioAutomation/AppGeneration/Templates/DataService/EntityFramework/_templates/_DataService/DataContextBase_cs.tt
+++ b/Zirpl.AppEngine.VisualStudioAutomation/AppGeneration/Templates/DataService/EntityFramework/_templates/_DataService/DataContextBase_cs.tt
@@ -2,7 +2,7 @@
 <#@ import namespace="System.Linq" #>
 <#@ parameter type="Zirpl.AppEngine.AppGeneration.App" name="App" #>
 <#@ parameter type="System.String" name="Namespace" #>
-<#@ parameter type="System.String" name="ClassName" #>
+<#@ parameter type="System.String" name="TypeName" #>
 using System;
 using System.Collections.Generic;
 using System.Data.Entity;
@@ -18,13 +18,13 @@ using Zirpl.Logging;
 
 namespace <#= this.Namespace #>
 {
-    public abstract partial class <#= this.ClassName #> : global::System.Data.Entity.DbContext
+    public abstract partial class <#= this.TypeName #> : global::System.Data.Entity.DbContext
     {
         public IValidationHelper ValidationHelper { get; set; }
         public ICurrentUserKeyProvider CurrentUserKeyProvider { get; set; }
         public IRetryPolicyFactory RetryPolicyFactory { get; set; }
 
-		protected <#= this.ClassName #>()
+		protected <#= this.TypeName #>()
 		{
 			this.Database.Log = s => this.GetLog().Debug(s);
 		}
