--- a/Zirpl.AppEngine.VisualStudioAutomation/AppGeneration/Templates/DataService/EntityFramework/_templates/_DataService/AppDataContext_cs.tt
+++ b/Zirpl.AppEngine.VisualStudioAutomation/AppGeneration/Templates/DataService/EntityFramework/_templates/_DataService/AppDataContext_cs.tt
@@ -1,6 +1,11 @@
 ﻿<#@ template language="C#" linePragmas="false" #>
 <#@ import namespace="System.Linq" #>
-<#@ parameter type="Zirpl.AppEngine.AppGeneration.App" name="App" #>
+<#@ import namespace="Zirpl.AppEngine.Model.Metadata" #>
+<#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.Templates.Model._templates" #>
+<#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.TextTemplating" #>
+<#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.TextTemplating" #>
+<#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.Model" #>
+<#@ parameter type="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.Model.App" name="App" #>
 <#@ parameter type="System.String" name="Namespace" #>
 <#@ parameter type="System.String" name="TypeName" #>
 using System;
