--- a/Zirpl.AppEngine.VisualStudioAutomation/AppGeneration/Templates/Model/_templates/_Model/DT_Enum_cs.tt
+++ b/Zirpl.AppEngine.VisualStudioAutomation/AppGeneration/Templates/Model/_templates/_Model/DT_Enum_cs.tt
@@ -1,7 +1,12 @@
 ﻿<#@ template language="C#" linePragmas="false" #>
 <#@ import namespace="System.Linq" #>
-<#@ parameter type="Zirpl.AppEngine.AppGeneration.App" name="App" #>
-<#@ parameter type="Zirpl.AppEngine.AppGeneration.DomainType" name="DomainType" #>
+<#@ import namespace="Zirpl.AppEngine.Model.Metadata" #>
+<#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.Templates.Model._templates" #>
+<#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.TextTemplating" #>
+<#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.TextTemplating" #>
+<#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.Model" #>
+<#@ parameter type="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.Model.App" name="App" #>
+<#@ parameter type="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.Model.DomainType" name="DomainType" #>
 <#@ parameter type="System.String" name="Namespace" #>
 <#@ parameter type="System.String" name="TypeName" #>
 using System;
