--- a/Zirpl.AppEngine.VisualStudioAutomation/AppGeneration/Templates/DataService/EntityFramework/_templates/_DataService/Mapping/DT_Mapping_cs.tt
+++ b/Zirpl.AppEngine.VisualStudioAutomation/AppGeneration/Templates/DataService/EntityFramework/_templates/_DataService/Mapping/DT_Mapping_cs.tt
@@ -6,8 +6,7 @@
 <#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.Model" #>
 <#@ parameter type="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.Model.App" name="App" #>
 <#@ parameter type="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.Model.DomainType" name="DomainType" #>
-<#@ parameter type="System.String" name="Namespace" #>
-<#@ parameter type="System.String" name="TypeName" #>
+<#@ parameter type="Zirpl.AppEngine.VisualStudioAutomation.TextTemplating.OutputInfo" name="OutputInfo" #>
 using System;
 using System.Collections.Generic;
 using System.Linq;
@@ -166,5 +165,7 @@ namespace <#= this.Namespace #>
 }
 <#+
 public bool ShouldTransform { get { return this.DomainType.IsPersistable; } }
-private string MetadataConstantsFullTypeName {get { return this.AsTransform().GetGeneratedTypeInfo<DT_MetadataConstants_cs>().FullTypeName; }}
+private string MetadataConstantsFullTypeName {get { return ((DotNetTypeOutputInfo)this.AsTransform().GetGeneratedTypeInfo<DT_MetadataConstants_cs>()).FullTypeName; }}
+public string Namespace { get { return ((DotNetTypeOutputInfo)this.OutputInfo).Namespace; } }
+public string TypeName { get { return ((DotNetTypeOutputInfo)this.OutputInfo).TypeName; } }
 #>
