--- a/Zirpl.Examples.ContactManager.CodeGeneration/App.tt
+++ b/Zirpl.Examples.ContactManager.CodeGeneration/App.tt
@@ -6,7 +6,7 @@
 <#@ assembly name="$(SolutionDir)Zirpl.AppEngine\bin\$(Configuration)\Zirpl.AppEngine.dll" #>
 <#@ CleanupBehavior processor="T4VSHost" CleanupAfterProcessingtemplate="true" #>
 <#
-this.AsTransform().GenerateSolutionStructure();
+//this.AsTransform().GenerateSolutionStructure();
 //this.AsTransform().CopyDefaultTemplates();
 this.AsTransform().GenerateApp();
 #>
