fixing where files are put

--- a/Zirpl.AppEngine.VisualStudioAutomation/AppGeneration/Templates/DataService/EntityFramework/_templates/_DataService/Mapping/DT_Mapping_cs.tt
+++ b/Zirpl.AppEngine.VisualStudioAutomation/AppGeneration/Templates/DataService/EntityFramework/_templates/_DataService/Mapping/DT_Mapping_cs.tt
@@ -1,6 +1,6 @@
 ﻿<#@ template language="C#" linePragmas="false" #>
 <#@ import namespace="System.Linq" #>
-<#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.Templates.Model._templates" #>
+<#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.Templates.Model._templates._Model" #>
 <#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.TextTemplating" #>
 <#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.TextTemplating" #>
 <#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.Model" #>
